2007-01-17  Renato Caldas  <seventhguardian@gmail.com>

	* fvwm/module_interface.h
	* fvwm/module_interface.c (module_input_enqueue):
	(module_input_execute):
	new functions based on AddToCommandQueue and ExecuteModuleCommand

	* fvwm/module_list.c (CMD_ModuleSynchronous):
	(PositiveWrite):
	* fvwm/events.c (My_XNextEvent):
	* fvwm/module_interface.c (ExecuteCommandQueue):
	using the above two new functions instead of AddToCommandQueue and
	ExecuteModuleCommand

	* fvwm/module_interface.c (cqueue_object_type):
	removed typedef

	* fvwm/module_interface.h
	* fvwm/module_interface.c (AddToCommandQueue):
	(ExecuteModuleCommand):
	removed functions

2007-01-16  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* fvwm/fvwm.h (window_style):
	* fvwm/style.c (style_parse_one_style_option):
	icon background relief and icon title relief changed to sigend char;
	should fix problem with ppc and negative values for these.

2007-01-16  Renato Caldas  <seventhguardian@gmail.com>

	* fvwm/module_list.h:
	* fvwm/module_list.c (module_receive):
	(module_input_discard):
	(module_input_expect):
	new functions to deal with module input

	* fvwm/module_list.h:
	* fvwm/module_list.c (HandleModuleInput):
	replaced by the above three functions

	* fvwm/events.c (My_XNextEvent):
	* fvwm/module_list.c (CMD_ModuleSynchronous):
	(PositiveWrite):
	adapted to use the above three functions instead of HandleModuleInput

2007-01-16  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* configure.ac (HAVE_PNG):
	don't mangle png_LIBS, use --with-png-library

2007-01-15  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* NEWS:
	removed news about previous change after move of version-2_5_20 tag
	on ChangeLog and fvwm/stack.c to the last revision and rebuilt tar
	balls.

	* fvwm/stack.c (__restack_window):
	fix so new transient windows with StackTransientParent on top layer
	don't make all windows raise above the pan frames.

	* NEWS:
 	* configure.ac:
	increased version to 2.5.21

	* NEWS: