@@ -1,3 +1,8 @@
+2007-01-19  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>
+
+	* fvwm/stack.c (is_transient_subtree_straight):
+	check first above the tree root, then beneth it.
+
 2007-01-17  Renato Caldas  <seventhguardian@gmail.com>
 
 	* fvwm/module_interface.h
